syntax = "proto3";

package chats;

option go_package = "shared/proto/chat;chat";

service ChatService {
    rpc CreateChat(CreateChatRequest) returns (CreateChatResponse);
    rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
    rpc GetChats(GetChatsRequest) returns (GetChatsResponse);
    rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);
}


message CreateChatRequest {
    string sender_id = 1;
    string recipient_id = 2;
}

message CreateChatResponse {
    string sender_id = 1;
    string recipient_id = 2;
    string chat_id = 3;      
}

message SendMessageRequest {
    string sender_id = 1;
    string recipient_id = 2;
    string message = 3;
}

message SendMessageResponse {
    string message_id = 1;
    string status = 2;
}

message GetChatsRequest {
    string user_id = 1;
}

message GetChatsResponse {
    repeated Chat chats = 1;
}

message Chat {
    string chat_id = 1;
    string sender_id = 2;
    string recipient_id = 3;
    string last_message = 4;
    string last_message_time = 5;
}

message GetMessagesRequest {
    string chat_id = 1;
}

message GetMessagesResponse {
    repeated Message messages = 1;
}

message Message {
    string message_id = 1;
    string sender_id = 2;
    string recipient_id = 3;
    string message = 4;
    string message_time = 5;
}